--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -5,16 +5,20 @@ items:
   href: azure-security.md
   items:
   - name: Avancerad hotidentifiering
+    displayName: vulnerability, virus, ids, incident
     href: azure-threat-detection.md
   - name: Loggning och granskning i Azure
+    displayName: incident
     href: azure-log-audit.md
   - name: Azure-nätverkssäkerhet
+    displayName: firewall, ssl, vpn, ids
     href: abstract-azure-network-security.md
   - name: Säkerhet för Azure-plattform utan server
     href: abstract-serverless-platform-security.md
   - name: Containersäkerhet i Azure
     href: abstract-container-security-microsoft-azure.md
   - name: Aktivera driftsäkerhet
+    displayName: policy, policies
     href: abstract-azure-operational-security.md
   - name: Isolering i Azure-molnet
     href: azure-isolation.md
@@ -43,6 +47,7 @@ items:
     - name: Diskkryptering för virtuella IaaS-datorer
       items:
       - name: Om Azure Disk Encryption
+        displayName: bitlocker
         href: azure-security-disk-encryption-overview.md
       - name: Snabbstarter
         items:
@@ -90,6 +95,7 @@ items:
     - name: Komponenter och gränser
       href: azure-infrastructure-components.md
     - name: Nätverksarkitektur
+      displayName: ssl
       href: azure-infrastructure-network.md
     - name: Produktionsnätverk
       href: azure-production-network.md
@@ -104,11 +110,13 @@ items:
     - name: Dataskydd
       href: azure-protection-of-customer-data.md
   - name: Microsoft-programvara mot skadlig kod
+    displayName: virus
     href: azure-security-antimalware.md
   - name: IaaS-säkerhet
     href: security-virtual-machines-overview.md
     items:
     - name: Metodtips – IaaS-arbetsbelastningar
+      displayName: patch
       href: azure-security-iaas.md
     - name: Azure Marketplace-avbildningar
       href: security-recommendations-azure-marketplace-images.md
@@ -128,6 +136,7 @@ items:
       displayName: identity
       href: azure-security-global-admin.md
   - name: Nätverkssäkerhet
+    displayName: firewall, ssl, vpn, ids
     href: security-network-overview.md
     items:
     - name: Bästa praxis
@@ -169,6 +178,7 @@ items:
   - name: Granskning och loggning
     items:
     - name: Säkerhetshantering
+      displayName: vulnerability, incident, virus,
       href: ../security-center/security-center-intro.md?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json
     - name: Säkerhet för fjärrhantering
       href: azure-security-management.md
@@ -196,17 +206,17 @@ items:
     - name: Säkerhetskontrollista
       href: azure-operational-security-checklist.md
 - name: Styrning och efterlevnad
-  displayName: blueprint
+  displayName: blueprint, privacy
   items:
   - name: AU-SKYDDAD
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: IaaS-webbprogram
       href: ./blueprints/au-protected-iaaswa-overview.md
     - name: PaaS-webbprogram
       href: ./blueprints/au-protected-paaswa-overview.md
   - name: FedRAMP
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/fedramp-analytics-overview.md
@@ -217,7 +227,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/fedramp-paaswa-overview.md
   - name: FFIEC
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/ffiec-analytics-overview.md
@@ -228,7 +238,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/ffiec-paaswa-overview.md
   - name: GDPR
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/gdpr-analytics-overview.md
@@ -239,12 +249,12 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/gdpr-paaswa-overview.md
   - name: HIPAA/HITRUST
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Hälsodata och AI
       href: ./blueprints/azure-health.md
   - name: NIST SP 800-171
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/nist171-analytics-overview.md
@@ -255,7 +265,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/nist171-paaswa-overview.md
   - name: PCI DSS
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/pcidss-analytics-overview.md
@@ -266,12 +276,12 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/pcidss-paaswa-overview.md
   - name: Betrodd Internetanslutning
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Betrodd Internetanslutning med Azure
       href: ./compliance/compliance-tic.md
   - name: UK NHS
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: Datanalys
       href: ./blueprints/uknhs-analytics-overview.md
@@ -282,7 +292,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/uknhs-paaswa-overview.md
   - name: OFFICIELLT FÖR STORBRITANNIEN
-    displayName: blueprint
+    displayName: blueprint, privacy
     items:
     - name: IaaS-webbprogram
       href: ./blueprints/ukofficial-iaaswa-overview.md
@@ -307,6 +317,7 @@ items:
   - name: Penntestning
     href: azure-security-pen-testing.md
   - name: Microsoft Threat Modeling Tool
+    displayName: stride
     href: azure-security-threat-modeling-tool.md
     items:
     - name: Komma igång
@@ -338,9 +349,9 @@ items:
         href: azure-security-threat-modeling-tool-sensitive-data.md
       - name: Sessionshantering
         href: azure-security-threat-modeling-tool-session-management.md
-ms.openlocfilehash: 99ff7a6ba5a2289855739ce8b269c4b3aae10e61
-ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
+ms.openlocfilehash: 21b41c50165ab4effa803cc0736b7fc64f252c43
+ms.sourcegitcommit: ad08b2db50d63c8f550575d2e7bb9a0852efb12f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/19/2018
-ms.locfileid: "46364864"
+ms.lasthandoff: 09/26/2018
+ms.locfileid: "47222139"
