--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -11,14 +11,14 @@ items:
     displayName: incident
     href: azure-log-audit.md
   - name: Azure-nätverkssäkerhet
-    displayName: firewall, ssl, vpn, ids
+    displayName: firewall, ssl, vpn, ids, gateway
     href: abstract-azure-network-security.md
   - name: Säkerhet för Azure-plattform utan server
     href: abstract-serverless-platform-security.md
   - name: Containersäkerhet i Azure
     href: abstract-container-security-microsoft-azure.md
   - name: Aktivera driftsäkerhet
-    displayName: policy, policies
+    displayName: policy, policies, azure monitor, soc
     href: abstract-azure-operational-security.md
   - name: Isolering i Azure-molnet
     href: azure-isolation.md
@@ -136,7 +136,7 @@ items:
       displayName: identity
       href: azure-security-global-admin.md
   - name: Nätverkssäkerhet
-    displayName: firewall, ssl, vpn, ids
+    displayName: firewall, ssl, vpn, ids, gateway
     href: security-network-overview.md
     items:
     - name: Bästa praxis
@@ -192,7 +192,7 @@ items:
         displayName: active directory
         href: security-azure-log-integration-ad.md
       - name: Integrera aviseringar i Security Center
-        href: security-azure-log-integration-security-center.md
+        href: ../security-center/security-center-export-data-to-siem.md?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json
       - name: Integrera loggar från Key Vault
         displayName: keyvault
         href: security-azure-log-integration-keyvault-eventhub.md
@@ -206,17 +206,17 @@ items:
     - name: Säkerhetskontrollista
       href: azure-operational-security-checklist.md
 - name: Styrning och efterlevnad
-  displayName: blueprint, privacy
+  displayName: blueprint, privacy, certifications
   items:
   - name: AU-SKYDDAD
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: IaaS-webbprogram
       href: ./blueprints/au-protected-iaaswa-overview.md
     - name: PaaS-webbprogram
       href: ./blueprints/au-protected-paaswa-overview.md
   - name: FedRAMP
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/fedramp-analytics-overview.md
@@ -227,7 +227,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/fedramp-paaswa-overview.md
   - name: FFIEC
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/ffiec-analytics-overview.md
@@ -238,7 +238,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/ffiec-paaswa-overview.md
   - name: GDPR
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/gdpr-analytics-overview.md
@@ -249,12 +249,12 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/gdpr-paaswa-overview.md
   - name: HIPAA/HITRUST
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Hälsodata och AI
       href: ./blueprints/azure-health.md
   - name: NIST SP 800-171
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/nist171-analytics-overview.md
@@ -265,7 +265,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/nist171-paaswa-overview.md
   - name: PCI DSS
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/pcidss-analytics-overview.md
@@ -276,12 +276,12 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/pcidss-paaswa-overview.md
   - name: Betrodd Internetanslutning
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Betrodd Internetanslutning med Azure
       href: ./compliance/compliance-tic.md
   - name: UK NHS
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: Datanalys
       href: ./blueprints/uknhs-analytics-overview.md
@@ -292,7 +292,7 @@ items:
     - name: PaaS-webbprogram
       href: ./blueprints/uknhs-paaswa-overview.md
   - name: OFFICIELLT FÖR STORBRITANNIEN
-    displayName: blueprint, privacy
+    displayName: blueprint, privacy, certifications
     items:
     - name: IaaS-webbprogram
       href: ./blueprints/ukofficial-iaaswa-overview.md
@@ -315,6 +315,7 @@ items:
   - name: Logga ett supportärende för en säkerhetshändelse
     href: azure-security-event-support-ticket.md
   - name: Penntestning
+    displayName: penetration
     href: azure-security-pen-testing.md
   - name: Microsoft Threat Modeling Tool
     displayName: stride
@@ -349,9 +350,9 @@ items:
         href: azure-security-threat-modeling-tool-sensitive-data.md
       - name: Sessionshantering
         href: azure-security-threat-modeling-tool-session-management.md
-ms.openlocfilehash: 21b41c50165ab4effa803cc0736b7fc64f252c43
-ms.sourcegitcommit: ad08b2db50d63c8f550575d2e7bb9a0852efb12f
+ms.openlocfilehash: 35ebaad2a1024ede0b1b020eacee43241909cc6a
+ms.sourcegitcommit: d1aef670b97061507dc1343450211a2042b01641
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/26/2018
-ms.locfileid: "47222139"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47391963"
