--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 9fd163db5b727c5284756e2d24a35c6c6e57a794
+ms.sourcegitcommit: 5b8d9dc7c50a26d8f085a10c7281683ea2da9c10
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/26/2018
+ms.locfileid: "47181389"
 documentType: LandingData
 title: Dokumentation om Azure Active Directory B2C
 metadata:
@@ -12,24 +18,39 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/29/2018
   ms.author: davidmu
-  ms.openlocfilehash: a70e3fe60291a0ee50dbaa4bd3caa460ff12ffef
-  ms.sourcegitcommit: d8ffb4a8cef3c6df8ab049a4540fc5e0fa7476ba
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/20/2018
-  ms.locfileid: "36284273"
 abstract:
   description: Azure Active Directory (Azure AD) B2C är en identitetshanteringstjänst som hjälper dig att anpassa och styra hur kunderna registrerar sig, loggar in och hanterar sina profiler när de använder dina program. Detta omfattar program som har utvecklas för bland annat iOS, Android och .NET. Azure AD B2C möjliggör dessa åtgärder samtidigt som kundernas identiteter skyddas. Lär dig hur du använder Azure AD B2C med våra snabbstarter, självstudier och exempel.
   aside:
     image:
       alt: 
       height: 110
-      src: https://docs.microsoft.com/azure/active-directory-b2c/media/index/active-directory-b2c-video.PNG
+      src: ./media/index/active-directory-b2c-video.PNG
       width: 250
-    title: Företag till konsument – identitetshantering med Azure Active Directory B2C (12:56)
-    href: https://azure.microsoft.com/resources/videos/build-2016-business-to-consumer-identity-management-with-azure-active-directory-b2c/
+    title: Kundidentitetshantering med Azure AD B2C (20:56)
+    href: https://channel9.msdn.com/Shows/On-NET/Customer-Identity-Management-with-Azure-AD-B2C
     width: 250
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/active-directory-b2c/active-directory-b2c-overview
+      html: <p>Läs mer om Azure AD B2C och dess funktioner och möjligheter.</p>
+      image:
+        src: ./media/index/i_get-started.svg
+      title: Om Azure AD B2C
+    - href: /azure/active-directory-b2c/solution-articles
+      html: <p>Undersök lösningen och utbildningsmöjligheter med Azure AD B2C.</p>
+      image:
+        src: ./media/index/i_advanced.svg
+      title: Lösningar och utbildning
+    - href: /azure/active-directory-b2c/trustframeworkpolicy
+      html: <p>Skapa avancerade scenarier för registrering och inloggning med anpassade principer i Azure AD B2C.</p>
+      image:
+        src: ./media/index/i_investigate.svg
+      title: Identity Experience Framework
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -58,11 +79,11 @@ sections:
     className: cardsD
     items:
     - title: ASP.NET
-      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-register-applications">Registrera program</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-web-app">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-web-api">Bevilja API-åtkomst</a></p>
+      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-create-tenant">Skapa en klient</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-web-app">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-web-api">Bevilja API-åtkomst</a></p>
     - title: Skrivbord
-      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-register-applications">Registrera program</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-desktop-app">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-desktop-app-webapi">Bevilja API-åtkomst</a></p>
+      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-create-tenant">Skapa en klient</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-desktop-app">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-desktop-app-webapi">Bevilja API-åtkomst</a></p>
     - title: En sida
-      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-register-applications">Registrera program</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-spa">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-spa-webapi">Bevilja API-åtkomst</a></p>
+      html: <p>1. <a href="/azure/active-directory-b2c/tutorial-create-tenant">Skapa en klient</a></p><p>2. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-spa">Autentisera användare</a></p><p>3. <a href="/azure/active-directory-b2c/active-directory-b2c-tutorials-spa-webapi">Bevilja API-åtkomst</a></p>
 - title: Exempel
   items:
   - type: paragraph
