--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -1,33 +1,41 @@
 items:
-- name: Azure AD-åtkomstgranskningsdokumentation
+- name: Dokumentation om styrning av Azure AD-identiteter
+  href: index.yml
 - name: Översikt
   items:
-  - name: Vad är en åtkomstgranskning?
-    href: access-reviews-overview.md
+  - name: Vad är identitetsstyrning?
+    href: identity-governance-overview.md
+  expanded: true
 - name: Instruktionsguider
   items:
-  - name: Skapa en åtkomstgranskning
-    href: create-access-review.md
-  - name: Slutför en åtkomstgranskning
-    href: complete-access-review.md
-  - name: Utför en åtkomstgranskning
-    href: perform-access-review.md
-  - name: Granska din åtkomst
-    href: review-your-access.md
-  - name: Gäståtkomst med åtkomstgranskning
-    href: manage-guest-access-with-access-reviews.md
-  - name: Hantera användaråtkomst med granskningar
-    href: manage-user-access-with-access-reviews.md
-  - name: Hantera program och deras kontroller
-    href: manage-programs-controls.md
-  - name: Hämta resultat av åtkomstgranskningar
-    href: retrieve-access-review.md
+  - name: Åtkomstgranskningar
+    items:
+    - name: Vad är en åtkomstgranskning?
+      href: access-reviews-overview.md
+    - name: Skapa en åtkomstgranskning
+      href: create-access-review.md
+    - name: Slutför en åtkomstgranskning
+      href: complete-access-review.md
+    - name: Utför en åtkomstgranskning
+      href: perform-access-review.md
+    - name: Granska din åtkomst
+      href: review-your-access.md
+    - name: Gäståtkomst med åtkomstgranskning
+      href: manage-guest-access-with-access-reviews.md
+    - name: Hantera användaråtkomst med granskningar
+      href: manage-user-access-with-access-reviews.md
+    - name: Hantera program och deras kontroller
+      href: manage-programs-controls.md
+    - name: Hämta resultat av åtkomstgranskningar
+      href: retrieve-access-review.md
+    - name: Hantera exkluderade användare
+      href: conditional-access-exclusion.md
   - name: Användningsvillkor
     href: active-directory-tou.md
   expanded: true
-ms.openlocfilehash: 302273bc1fe1ed73fff4cb4f5a8bc90f08636340
-ms.sourcegitcommit: 616e63d6258f036a2863acd96b73770e35ff54f8
+ms.openlocfilehash: b6280e42839344169ab651cd5d882bb6abfbf388
+ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/14/2018
-ms.locfileid: "45606753"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47163145"
