--- a/articles/app-service/environment/toc.yml
+++ b/articles/app-service/environment/toc.yml
@@ -1,122 +1,133 @@
+items:
 - name: App Service Environment
 - name: Översikt
   items:
-    - name: Om App Service-miljöer
-      href: intro.md
+  - name: Om App Service-miljöer
+    href: intro.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Skapa extern ASE
-      href: create-external-ase.md
-    - name: Skapa intern ASE
-      href: create-ilb-ase.md
+  - name: Skapa extern ASE
+    href: create-external-ase.md
+  - name: Skapa intern ASE
+    href: create-ilb-ase.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Integrera med WAF
-      href: app-service-app-service-environment-web-application-firewall.md
-    - name: Konfigurera TLS
-      href: app-service-app-service-environment-custom-settings.md
+  - name: Integrera med WAF
+    href: app-service-app-service-environment-web-application-firewall.md
+  - name: Konfigurera TLS
+    href: app-service-app-service-environment-custom-settings.md
 - name: Exempel
   items:
-    - name: Azure CLI
-      href: ../app-service-cli-samples.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Azure PowerShell
-      href: ../app-service-powershell-samples.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+  - name: Azure CLI
+    href: ../app-service-cli-samples.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+  - name: Azure PowerShell
+    href: ../app-service-powershell-samples.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
 - name: Begrepp
   items:
-    - name: Nätverksarkitektur
-      href: network-info.md
-    - name: Geo-distribuerad skalning
-      href: app-service-app-service-environment-geo-distributed-scale.md
-    - name: ASEv1
-      href: app-service-app-service-environment-intro.md
-    - name: Diagnostik
-      href: ../app-service-diagnostics.md
+  - name: Nätverksarkitektur
+    href: network-info.md
+  - name: Geo-distribuerad skalning
+    href: app-service-app-service-environment-geo-distributed-scale.md
+  - name: ASEv1
+    href: app-service-app-service-environment-intro.md
+  - name: Diagnostik
+    href: ../app-service-diagnostics.md
+  - name: Certifikat
+    href: certificates.md
 - name: Instruktionsguider
   items:
-    - name: Använd ASE
-      href: using-an-ase.md
-    - name: Integrera med Application Gateway
-      href: integrate-with-application-gateway.md
-    - name: Skapa ASE från en mall
-      href: create-from-template.md
-    - name: Konfiguration av framtvingad tunnel
-      href: forced-tunnel-support.md
+  - name: Använd ASE
+    href: using-an-ase.md
+  - name: Integrera med Application Gateway
+    href: integrate-with-application-gateway.md
+  - name: Skapa ASE från en mall
+    href: create-from-template.md
+  - name: Konfiguration av framtvingad tunnel
+    href: forced-tunnel-support.md
+  - name: Brandväggsintegrering
+    href: firewall-integration.md
 - name: Referens
   items:
-    - name: Hanteringsadresser
-      href: management-addresses.md
-    - name: Dokumentation om ASEv1
-      items:
-        - name: Skapa ASEv1
-          href: app-service-web-how-to-create-an-app-service-environment.md
-        - name: Konfigurera ASEv1
-          href: app-service-web-configure-an-app-service-environment.md
-        - name: Skapa intern ASEv1
-          href: app-service-environment-with-internal-load-balancer.md
-        - name: Skapa intern ASEv1 från mall
-          href: app-service-app-service-environment-create-ilb-ase-resourcemanager.md
-        - name: Konfigurera AutoScale i ASEv1
-          href: app-service-environment-auto-scale.md
-        - name: Skala ut app i ASEv1
-          href: app-service-web-scale-a-web-app-in-an-app-service-environment.md
-        - name: Nätverksarkitektur
-          href: app-service-app-service-environment-network-architecture-overview.md
-        - name: Skapa webbapp i ASEv1
-          href: app-service-web-how-to-create-a-web-app-in-an-ase.md
-        - name: Ansluta till serverdel
-          href: app-service-app-service-environment-securely-connecting-to-backend-resources.md
-        - name: Konfigurera ExpressRoute
-          href: app-service-app-service-environment-network-configuration-expressroute.md
-        - name: Kontrollera inkommande trafik till offentlig app
-          href: app-service-app-service-environment-control-inbound-traffic.md
-        - name: Använd flernivåsäkerhet
-          href: app-service-app-service-environment-layered-security.md
+  - name: Hanteringsadresser
+    href: management-addresses.md
+  - name: Dokumentation om ASEv1
+    items:
+    - name: Skapa ASEv1
+      href: app-service-web-how-to-create-an-app-service-environment.md
+    - name: Konfigurera ASEv1
+      href: app-service-web-configure-an-app-service-environment.md
+    - name: Skapa intern ASEv1
+      href: app-service-environment-with-internal-load-balancer.md
+    - name: Skapa intern ASEv1 från mall
+      href: app-service-app-service-environment-create-ilb-ase-resourcemanager.md
+    - name: Konfigurera AutoScale i ASEv1
+      href: app-service-environment-auto-scale.md
+    - name: Skala ut app i ASEv1
+      href: app-service-web-scale-a-web-app-in-an-app-service-environment.md
+    - name: Nätverksarkitektur
+      href: app-service-app-service-environment-network-architecture-overview.md
+    - name: Skapa webbapp i ASEv1
+      href: app-service-web-how-to-create-a-web-app-in-an-ase.md
+    - name: Ansluta till serverdel
+      href: app-service-app-service-environment-securely-connecting-to-backend-resources.md
+    - name: Konfigurera ExpressRoute
+      href: app-service-app-service-environment-network-configuration-expressroute.md
+    - name: Kontrollera inkommande trafik till offentlig app
+      href: app-service-app-service-environment-control-inbound-traffic.md
+    - name: Använd flernivåsäkerhet
+      href: app-service-app-service-environment-layered-security.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/app-service/'
-    - name: Kvotinformation
-      href: '../../azure-subscription-service-limits.md#app-service-limits'
-    - name: Tjänstuppdateringar och viktig information
-      href: 'https://azure.microsoft.com/updates/?product=app-service'
-    - name: Bästa praxis
-      href: ../app-service-best-practices.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Exempel
-      href: 'https://azure.microsoft.com/resources/samples/?service=app-service'
-    - name: Videoklipp
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/app-service/
+  - name: Kvotinformation
+    href: ../../azure-subscription-service-limits.md#app-service-limits
+  - name: Tjänstuppdateringar och viktig information
+    href: https://azure.microsoft.com/updates/?product=app-service
+  - name: Bästa praxis
+    href: ../app-service-best-practices.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+  - name: Exempel
+    href: https://azure.microsoft.com/resources/samples/?service=app-service
+  - name: Videoklipp
+    items:
+    - name: Azure-videor
+      href: https://azure.microsoft.com/resources/videos/index/?services=app-service
+    - name: Hantera modern PaaS för företaget med Azure App Service
+      href: https://channel9.msdn.com/Events/Ignite/2016/BRK3205/player
+    - name: Distribuera säkra appar med hög skalbarhet
+      href: https://channel9.msdn.com/Events/Microsoft-Azure/AzureCon-2015/ACON325/player
+    - name: Köra företagswebbappar och mobilappar på Azure App Service
+      href: https://channel9.msdn.com/Events/Ignite/2015/BRK3715/player
+  - name: Kokböcker
+    items:
+    - name: Distributionsskript
+      href: https://azure.microsoft.com/documentation/scripts/
+  - name: Felsökning
+    items:
+    - name: Felsöka med Visual Studio
+      href: ../web-sites-dotnet-troubleshoot-visual-studio.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Felsöka Node.js-app
+      href: ../app-service-web-nodejs-best-practices-and-troubleshoot-guide.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Felsöka HTTP 502 och 503
+      href: ../app-service-web-troubleshoot-http-502-http-503.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Felsöka prestandaproblem
+      href: ../app-service-web-troubleshoot-performance-degradation.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: VANLIGA FRÅGOR OCH SVAR
       items:
-        - name: Azure-videor
-          href: 'https://azure.microsoft.com/resources/videos/index/?services=app-service'
-        - name: Hantera modern PaaS för företaget med Azure App Service
-          href: 'https://channel9.msdn.com/Events/Ignite/2016/BRK3205/player'
-        - name: Distribuera säkra appar med hög skalbarhet
-          href: 'https://channel9.msdn.com/Events/Microsoft-Azure/AzureCon-2015/ACON325/player'
-        - name: Köra företagswebbappar och mobilappar på Azure App Service
-          href: 'https://channel9.msdn.com/Events/Ignite/2015/BRK3715/player'
-    - name: Kokböcker
-      items:
-        - name: Distributionsskript
-          href: 'https://azure.microsoft.com/documentation/scripts/'
-    - name: Felsökning
-      items:
-        - name: Felsöka med Visual Studio
-          href: ../web-sites-dotnet-troubleshoot-visual-studio.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-        - name: Felsöka Node.js-app
-          href: ../app-service-web-nodejs-best-practices-and-troubleshoot-guide.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-        - name: Felsöka HTTP 502 och 503
-          href: ../app-service-web-troubleshoot-http-502-http-503.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-        - name: Felsöka prestandaproblem
-          href: ../app-service-web-troubleshoot-performance-degradation.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-        - name: VANLIGA FRÅGOR OCH SVAR
-          items:
-            - name: 'Vanliga frågor och svar om tillgänglighet, prestanda och program'
-              href: ../app-service-web-availability-performance-application-issues-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-            - name: Vanliga frågor och svar om distribution
-              href: ../app-service-web-deployment-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-            - name: Vanliga frågor och svar om tekniker med öppen källkod
-              href: ../app-service-web-open-source-technologies-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-            - name: Vanliga frågor och svar om konfiguration och hantering
-              href: ../app-service-web-configuration-and-management-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+      - name: Vanliga frågor och svar om tillgänglighet, prestanda och program
+        href: ../app-service-web-availability-performance-application-issues-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+      - name: Vanliga frågor och svar om distribution
+        href: ../app-service-web-deployment-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+      - name: Vanliga frågor och svar om tekniker med öppen källkod
+        href: ../app-service-web-open-source-technologies-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+      - name: Vanliga frågor och svar om konfiguration och hantering
+        href: ../app-service-web-configuration-and-management-faq.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+ms.openlocfilehash: d9a026c0ba2601a1a4e61c5868b4fdd53599f579
+ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47165746"
