--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -33,8 +33,6 @@ items:
       href: functions-create-scheduled-function.md
   - name: Integrera
     items:
-    - name: Azure Cosmos DB
-      href: functions-integrate-store-unstructured-data-cosmosdb.md
     - name: Storage
       href: functions-integrate-storage-queue-output-binding.md
   expanded: true
@@ -66,7 +64,7 @@ items:
     href: https://docs.microsoft.com/sandbox/functions-recipes/
 - name: Begrepp
   items:
-  - name: Jämföra 1.x och 2.x
+  - name: Jämför version 1.x and 2.x
     href: functions-versions.md
   - name: Skalning och värdtjänster
     href: functions-scale.md
@@ -176,6 +174,8 @@ items:
       href: set-runtime-version.md
     - name: Inaktivera en funktion
       href: disable-function.md
+    - name: Felsöka Storage
+      href: functions-recover-storage-account.md
   - name: Övervaka
     href: functions-monitoring.md
   - name: Integrera
@@ -282,9 +282,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/en-us/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 2432bca909565d46fa28a56fe58550a7892e3ad8
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 69bdebbd3226696a7f320095ff3797db48ffff96
+ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46969078"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47064454"
