--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -61,7 +61,7 @@ items:
         href: azure-stack-border-connectivity.md
       - name: DNS-integrering
         href: azure-stack-integrate-dns.md
-      - name: Integrering med brandväggen
+      - name: Brandväggsintegrering
         href: azure-stack-firewall.md
         items:
         - name: Publicera slutpunkter
@@ -361,7 +361,7 @@ items:
 - name: Referens
   items:
   - name: Azure Stack PowerShell
-    href: /powershell/azure/azure-stack/overview?view=azurestackps-1.2.9
+    href: /powershell/azure/azure-stack/overview
 - name: Relaterat
   items:
   - name: Användardokumentation om Azure Stack
@@ -382,9 +382,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: acb1125a15cf7d1999a3f24ad6f2fbbe946798f1
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.openlocfilehash: 434ca3b33d74e95003daba04614b47b2fcce318a
+ms.sourcegitcommit: d1aef670b97061507dc1343450211a2042b01641
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47035223"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47391980"
