--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -18,21 +18,15 @@ items:
   expanded: true
 - name: Självstudier
   items:
-  - name: Azure Container Instances
-    href: ../container-instances/container-instances-tutorial-prepare-app.md
-  - name: Azure Kubernetes Service (AKS)
-    href: ../aks/tutorial-kubernetes-prepare-app.md
-  - name: Service Fabric
-    href: ../service-fabric/service-fabric-tutorial-create-container-images.md
-  - name: Skapa containeravbildningar (förhandsgranskning)
+  - name: Skapa containeravbildningar
     items:
     - name: 1 – Skapa avbildningar i Azure
-      href: container-registry-tutorial-quick-build.md
+      href: container-registry-tutorial-quick-task.md
     - name: 2 – Automatisera skapandet av avbildningar
       href: container-registry-tutorial-build-task.md
     - name: 3 – Grundläggande uppdateringar av avbildningar
       href: container-registry-tutorial-base-image-update.md
-  - name: Geo-replikering
+  - name: GEO-replikera ett register
     items:
     - name: 1 – Förbered containerregister
       href: container-registry-tutorial-prepare-registry.md
@@ -46,26 +40,28 @@ items:
     href: container-registry-skus.md
   - name: Bildlagring
     href: container-registry-storage.md
-  - name: Bygg och korrigera med ACR Build
-    href: container-registry-build-overview.md
   - name: Geo-replikering
     href: container-registry-geo-replication.md
   - name: Registrera metodtips
     href: container-registry-best-practices.md
 - name: Instruktionsguider
   items:
-  - name: Skicka/hämta en avbildning
-    href: container-registry-get-started-docker-cli.md
-  - name: Visa lagringsplatser
-    href: container-registry-repositories.md
-  - name: Ta bort containeravbildningar
-    href: container-registry-delete.md
-  - name: Innehållsförtroende (förhandsversion)
-    href: container-registry-content-trust.md
-  - name: Uppgradera ett klassiskt register
-    href: container-registry-upgrade.md
-  - name: Använda ACR-webhooks
-    href: container-registry-webhook.md
+  - name: Registeråtgärder
+    items:
+    - name: Skicka/hämta en avbildning
+      href: container-registry-get-started-docker-cli.md
+    - name: Visa lagringsplatser
+      href: container-registry-repositories.md
+    - name: Ta bort containeravbildningar
+      href: container-registry-delete.md
+    - name: Innehållsförtroende (förhandsversion)
+      href: container-registry-content-trust.md
+    - name: Uppgradera ett klassiskt register
+      href: container-registry-upgrade.md
+    - name: Använda ACR-webhooks
+      href: container-registry-webhook.md
+    - name: Lagringsplatser för Helm-diagram (förhandsversion)
+      href: container-registry-helm-repos.md
   - name: Autentisering
     items:
     - name: Översikt över autentisering
@@ -76,6 +72,22 @@ items:
       href: container-registry-auth-aci.md
     - name: Azure Kubernetes Service (AKS)
       href: container-registry-auth-aks.md
+  - name: Bygga och korrigera
+    items:
+    - name: ACR-uppgifter
+      href: container-registry-tasks-overview.md
+    - name: Uppgifter i flera steg (förhandsversion)
+      href: container-registry-tasks-multi-step.md
+    - name: Referens för uppgifter i flera steg (förhandsversion)
+      href: container-registry-tasks-reference-yaml.md
+  - name: Register och andra Azure-tjänster
+    items:
+    - name: Azure Container Instances
+      href: ../container-instances/container-instances-tutorial-prepare-app.md
+    - name: Azure Kubernetes Service (AKS)
+      href: ../aks/tutorial-kubernetes-prepare-app.md
+    - name: Service Fabric
+      href: ../service-fabric/service-fabric-tutorial-create-container-images.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -115,9 +127,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-container-registry
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
-ms.openlocfilehash: 979c2864481b25df6534d9f5858d65d02fe498f0
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 6ea059f7c534b760b0db0c406edb7c34ac73c0dc
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46957752"
+ms.locfileid: "47031177"
