--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 02c604489d8db48a50598f99f6722d555e357f67
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: f18334996e82d83046fa663af08d69dee21a3127
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46951074"
+ms.locfileid: "47039606"
 documentType: LandingData
 title: Azure Container Registry-dokumentation
 metadata:
@@ -49,7 +49,7 @@ sections:
     style: unordered
     className: spaced noBullet
     items:
-    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa containeravbildningar med ACR Build (förhandsgranskning)</a>
+    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa containeravbildningar med ACR-uppgifter</a>
     - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Geo-replikering för Container Registry</a>
     - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Container Registry med Azure Kubernetes Service (AKS)</a>
