--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -17,7 +17,7 @@ items:
       href: tutorial-acm-create-budgets.md
     - name: 2 – Exportera data
       href: tutorial-export-acm-data.md
-    - name: 3 – Optimeringsrekommendationer
+    - name: 3 – Agera utifrån rekommendationer
       href: tutorial-acm-opt-recommendations.md
   - name: Begrepp
     items:
@@ -25,13 +25,8 @@ items:
       href: cost-mgt-best-practices.md
   - name: Referens
     items:
-    - name: Översikt över API för Azure Consumption
-      href: ../billing/billing-consumption-api-overview.md
-      items:
-      - name: REST API för Azure Consumption
-        href: https://docs.microsoft.com/rest/api/consumption
-    - name: Azure-översikt
-      href: https://azure.microsoft.com/roadmap/
+    - name: REST API för Azure Consumption
+      href: https://docs.microsoft.com/rest/api/consumption
   - name: Resurser
     items:
     - name: Utveckla dina färdigheter med Microsoft Learn
@@ -104,9 +99,9 @@ items:
         href: cost-mgt-faq.md
       - name: Kontakta Cloudyns support
         href: support-request-cost-management.md
-ms.openlocfilehash: 8bce54dbde8acd8fb8d03479036c934242d434cf
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 1701682e32a7db08a257ef3b0d26c9f88b8f1d03
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46972461"
+ms.locfileid: "47033387"
