--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -13,6 +13,8 @@ items:
   items:
   - name: Lägg till en anpassad domän i din Front Door
     href: front-door-custom-domain.md
+  - name: Aktivera HTTPS för en anpassad domän
+    href: front-door-custom-domain-https.md
 - name: Exempel
   items:
   - name: Resource Manager-mallar
@@ -21,8 +23,8 @@ items:
   items:
   - name: Serverdelar och serverdelspooler
     href: front-door-backend-pool.md
-  - name: DDOS-skydd och programskiktssäkerhet
-    href: front-door-ddos-security.md
+  - name: Säkerhet för programskikt
+    href: front-door-application-security.md
   - name: Belastningsutjämning med Azures paket för programleverans
     href: front-door-lb-with-azure-app-delivery-suite.md
   - name: Routningsarkitektur
@@ -43,6 +45,20 @@ items:
     href: front-door-http-headers-protocol.md
   - name: Övervakning
     href: front-door-diagnostics.md
+- name: Instruktionsguider
+  items:
+  - name: Felsöka
+    items:
+    - name: Felsöka routningsproblem
+      href: front-door-troubleshoot-routing.md
+    - name: Tillåtna certifikatutfärdare
+      href: front-door-troubleshoot-allowed-ca.md
+- name: Referens
+  items:
+  - name: Azure PowerShell
+    href: front-door-powershell-reference.md
+  - name: REST-API
+    href: front-door-rest-api.md
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -53,9 +69,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=frontdoor
-ms.openlocfilehash: e44b12e49ea03cb344288367f1f9a97e195f39a4
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: ef2336af29de4fd7f707041d2b730b40cc7536fe
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46949136"
+ms.locfileid: "47037770"
