--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ab56a5b1634d11d21597dbfdba8bc7a8d6f9b18b
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: c3e1b6e46230257e94fa03a2eaeb2e34ee022b2b
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46957854"
+ms.locfileid: "47031925"
 documentType: LandingData
 title: Dokumentation om Azure Blueprint
 metadata:
@@ -18,7 +18,7 @@ metadata:
   ms.date: 09/18/2018
   ms.author: dacoulte
 abstract:
-  description: Med Azure Blueprint kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och effekter för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal. Lär dig hur du skapar, tilldelar och hanterar principdefinitioner med våra snabbstarter, vägledningar och exempel.
+  description: Med Azure Blueprint kan du distribuera och uppdatera molnmiljöer med en upprepningsbar process med sammansättningsbara artefakter som principer, rollbaserad åtkomstkontroll och Azure Resource Manager-mallar.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
