--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 1c25ae1acb112221047876ea6dd360c6d3bb2817
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: ecf300b4095b4b6c928f4caddf9ee51423f6e1cc
+ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46946246"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47163655"
 documentType: LandingData
 title: Azure-hantering – styrning
 metadata:
@@ -19,6 +19,15 @@ metadata:
   ms.author: dacoulte
 abstract:
   description: Azure-styrning är en samling begrepp och tjänster som är utformade för att möjliggöra hantering av olika Azure-resurser i stor skala. De här tjänsterna gör det möjligt att ordna och strukturera dina prenumerationer på ett logiskt sätt, skapa och distribuera återanvändbara och Azure-interna paket med resurser, definiera, granska och åtgärda dina resurser och mycket mer. Använd den här sidan om du vill veta mer om de här begreppen och tjänsterna och hur du använder dem i din miljö i dag.
+  aside:
+    image:
+      alt: 
+      height: 225
+      src: ./media/video.png
+      width: 250
+    title: Få kontroll över resurser med Azure-styrning (1:47)
+    href: https://www.youtube.com/watch?v=MhGbKjlmuRs
+    width: 250
 sections:
 - title: Komponenter och tjänster
 - items:
@@ -60,11 +69,3 @@ sections:
     - href: /azure/architecture/cloud-adoption/appendix/azure-scaffold?toc=/azure/governance/toc.json
       html: <p>Gör det möjligt för administratörer att säkerställa att arbetsbelastningar uppfyller de lägsta styrningskraven för en organisation utan att hindra affärsgrupper och utvecklare från att snabbt uppnå sina egna mål.<br /><br /></p>
       title: Enterprise-kodskelett
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Princip
-      html: <p>Kommandorad<ul><li><a href="/cli/azure/policy">Azure CLI</a></li></ul></p><p>PowerShell<ul><li><a href="/powershell/module/azurerm.resources/#policies">Azure PowerShell</a></li></ul></p><p>REST-API<ul><li><a href="/rest/api/policy-insights/policyevents">Händelser</a></li><li><a href="/rest/api/policy-insights/policystates">Tillstånd</a></li><li><a href="/rest/api/resources/policyassignments">Tilldelningar</a></li><li><a href="/rest/api/resources/policydefinitions">Principdefinitioner</a></li><li><a href="/rest/api/resources/policysetdefinitions">Initiativdefinitioner</a></li></ul></p>
