--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -74,8 +74,8 @@ items:
     items:
     - name: Brandväggsregler
       href: concepts-firewall-rules.md
-    - name: Konfigurerar SSL
-      href: concepts-ssl-connection-security.md
+    - name: Advanced Threat Protection
+      href: concepts-data-access-and-security-threat-protection.md
     - name: VNet
       href: concepts-data-access-and-security-vnet.md
   - name: Verksamhetskontinuitet
@@ -156,12 +156,10 @@ items:
       href: howto-data-in-replication.md
     - name: Skapa skrivskyddade repliker på Azure-portalen
       href: howto-read-replicas-portal.md
-  - name: Felsöka
+  - name: Advanced Threat Protection
     items:
-    - name: Felsöka frågeprestanda
-      href: howto-troubleshoot-query-performance.md
-    - name: Använda vyer i sys-schema
-      href: howto-troubleshoot-sys-schema.md
+    - name: Azure Portal
+      href: howto-database-threat-protection-portal.md
   - name: Virtual Network
     items:
     - name: Azure Portal
@@ -214,9 +212,9 @@ items:
     href: partners-migration-mysql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 7c2ba8eecdf39d1e00abe91d9918fdaf2f1cec88
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: c4ce15c7c6260b179bf54f7f8bd78fcee735e3ac
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46980805"
+ms.locfileid: "47036872"
