--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -142,7 +142,7 @@ items:
       href: https://docs.microsoft.com/rest/api/searchservice/add-scoring-profiles-to-a-search-index
     - name: Synonymer
       href: search-synonyms.md
-  - name: Indexeringsdata
+  - name: Indexera data
     items:
     - name: Läsa in data
       href: search-what-is-data-import.md
@@ -174,7 +174,7 @@ items:
         href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
       - name: Fältmappningar
         href: search-indexer-field-mappings.md
-  - name: Söker efter data
+  - name: Frågedata
     items:
     - name: Frågetyper och sammansättning
       href: search-query-overview.md
@@ -182,7 +182,7 @@ items:
       href: search-explorer.md
     - name: Exempel för enkel syntax
       href: search-query-simple-examples.md
-    - name: Exempel för fullständig syntax
+    - name: Exempel på Lucene-syntax
       href: search-query-lucene-examples.md
     - name: Frågereferens
       items:
@@ -279,9 +279,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=search
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: 59409b9a3658d1bb3b36e938d83e4a2b880a7a6d
-ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.openlocfilehash: 556a7651fc59c33a032a1e98e7bf123fe433889f
+ms.sourcegitcommit: 5b8d9dc7c50a26d8f085a10c7281683ea2da9c10
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/14/2018
-ms.locfileid: "41927627"
+ms.lasthandoff: 09/26/2018
+ms.locfileid: "47182780"
