--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -36,7 +36,7 @@ items:
     href: security-center-secure-score.md
   - name: Uppgradera till avancerad säkerhet
     href: security-center-onboarding.md
-  - name: Serverskydd med Windows Defender ATP (förhandsversion)
+  - name: Serverskydd med Windows Defender ATP
     href: security-center-wdatp.md
   - name: Ange säkerhetsprinciper
     href: security-center-azure-policy.md
@@ -225,9 +225,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: bfa732fa768dd55ec256b00c7259e5c66e69f0a3
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 77742b337a109bb1d9f81a16c9b614268859f35e
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46948629"
+ms.locfileid: "47041871"
