--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -107,6 +107,8 @@ items:
       href: sql-database-connectivity-architecture.md
     - name: T-SQL-skillnader
       href: sql-database-transact-sql-information.md
+    - name: Transaktionsreplikering – enkla databaser och elastiska pooler
+      href: replication-to-sql-database.md
   - name: Enkla databaser
     items:
     - name: Skapa och hantera
@@ -146,7 +148,7 @@ items:
     - name: T-SQL-skillnader
       href: sql-database-managed-instance-transact-sql-information.md
     - name: Transaktionsreplikering
-      href: https://docs.microsoft.com/sql/relational-databases/replication/replication-with-sql-database-managed-instance?toc=/azure/sql-database/toc.json
+      href: replication-with-sql-database-managed-instance.md
   - name: Verksamhetskontinuitet
     items:
     - name: Verksamhetskontinuitet
@@ -622,9 +624,9 @@ items:
     href: /azure/architecture/
   - name: Kundberättelser
     href: http://customers.microsoft.com/en-us/search?sq=%22Azure%20SQL%20Database%22&ff=&p=0&so=story_publish_date%20desc
-ms.openlocfilehash: 8b8ef8dec2d79a1eb49372432781a64914a70896
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 009bd79dca50b98268b9bfb7ba4b1a3ab0f4c44b
+ms.sourcegitcommit: d1aef670b97061507dc1343450211a2042b01641
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46985137"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47393884"
