--- a/articles/terraform/toc.yml
+++ b/articles/terraform/toc.yml
@@ -40,6 +40,12 @@ items:
     items:
     - name: Installera Terraform Visual Studio Code-tillägget
       href: terraform-vscode-extension.md
+    - name: Skapa en grundläggande Terraform-mall med hjälp av Yeoman
+      href: terraform-vscode-module-generator.md
+- name: Begrepp
+  items:
+  - name: Azure Cloud Shell-integrering
+    href: terraform-cloud-shell.md
 - name: Exempel
   items:
   - name: Konfigurationsmallar
@@ -64,9 +70,9 @@ items:
     href: https://azure.microsoft.com/solutions/devops/terraform/
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
-ms.openlocfilehash: 6378b8e647afa95666e0a996b546c8d4147e038e
-ms.sourcegitcommit: 616e63d6258f036a2863acd96b73770e35ff54f8
+ms.openlocfilehash: 996f032cce0b0d45c559a584ce364c3561675470
+ms.sourcegitcommit: d1aef670b97061507dc1343450211a2042b01641
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/14/2018
-ms.locfileid: "45604034"
+ms.lasthandoff: 09/27/2018
+ms.locfileid: "47395329"
