--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -454,6 +454,8 @@ items:
       href: how-to-use-perfInsights.md
     - name: VM-tillägg för prestandadiagnostik
       href: performance-diagnostics-vm-extension.md
+    - name: Prestandadiagnostik för virtuella Azure-datorer
+      href: performance-diagnostics.md
     - name: Använd kapslad virtualisering
       href: troubleshoot-vm-by-use-nested-virtualization.md
     - name: Installera VM-agenten i offlineläge
@@ -472,6 +474,8 @@ items:
         href: troubleshoot-bitlocker-boot-error.md
       - name: Kontrollera filsystemfel
         href: troubleshoot-check-disk-boot-error.md
+      - name: Vanliga blåskärmsfel
+        href: troubleshoot-common-blue-screen-error.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -510,9 +514,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 84b76400e029c835f3a070fa7bdc80afe3f147d1
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.openlocfilehash: aca65942e3d0349c817e0f1132ec823f739f0377
+ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47035903"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47161521"
